--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port = 8081
+spring.datasource.url=jdbc:postgresql://localhost:5432/springmvc
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
