--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=1234
 spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
+
+upload.path=C:/Users/Andrey/IdeaProjects/SpringMVC/files
